Updated endpoints functionalities
